--- a/src/classes/ContactTriggerHandler.cls
+++ b/src/classes/ContactTriggerHandler.cls
@@ -16,25 +16,24 @@ public with sharing class ContactTriggerHandler {
     public static void synchronizeContactAccountPropertyRecord(List<Contact> newContactList) {
         Set<Id> setOfAccountIds = new Set<Id>();
         for(Contact con: newContactList){
-            setOfAccountIds.add(con.AccountId);   
+            if(con.Status__c == null){
+                setOfAccountIds.add(con.AccountId);   
+            }
         } 
         System.debug(setOfAccountIds);
         if(!setOfAccountIds.isEmpty()){
-            Map<Id,Account> mapAccountWithId = new Map<Id,Account>([SELECT Id,Status__c,Property__c,
-                                                                    Property__r.Status__c,
-                                                                    Property__r.Name 
-                                                                    FROM Account 
-                                                                    WHERE Id IN: setOfAccountIds]);
-            System.debug(mapAccountWithId);                                                            
+            Map<Id,Account> mapOfStatesToUpdate = new Map<Id,Account>([SELECT Id,Status__c,Property__c,Property__r.Status__c,Property__r.Name 
+                                                                    FROM Account WHERE Id IN: setOfAccountIds]);
+            System.debug(mapOfStatesToUpdate);                                                            
             for(Contact con: newContactList){
                 if(con.Status__c == null) {
-                    for(Account acc : mapAccountWithId.values()) {
+                    for(Account acc : mapOfStatesToUpdate.values()) {
                         if(con.AccountId == acc.Id) {
                             if(acc.Status__c != null){
                                 con.Status__c = acc.Status__c;
                                 System.debug('Contact Status:======== ' + con.Status__c); 
                             }else if(acc.Status__c == null){
-                                con.Stataus__c = acc.Property__r.Status__c;
+                                con.Status__c = acc.Property__r.Status__c;
                                 acc.Status__c = acc.Property__r.Status__c;
                                 System.debug('Contact Status:======== ' + con.Status__c);
                                 System.debug('Account Status:======== ' + acc.Status__c);
