--- a/src/classes/ContactTriggerHandler.cls
+++ b/src/classes/ContactTriggerHandler.cls
@@ -22,8 +22,11 @@ public with sharing class ContactTriggerHandler {
         } 
         System.debug(setOfAccountIds);
         if(!setOfAccountIds.isEmpty()){
-            Map<Id,Account> mapOfStatesToUpdate = new Map<Id,Account>([SELECT Id,Status__c,Property__c,Property__r.Status__c,Property__r.Name 
-                                                                    FROM Account WHERE Id IN: setOfAccountIds]);
+            Map<Id,Account> mapOfStatesToUpdate = new Map<Id,Account>([SELECT Id,Status__c,Property__c,
+                                                                       Property__r.Status__c,
+                                                                       Property__r.Name 
+                                                                       FROM Account 
+                                                                       WHERE Id IN: setOfAccountIds]);
             System.debug(mapOfStatesToUpdate);                                                            
             for(Contact con: newContactList){
                 if(con.Status__c == null) {
