--- a/src/classes/StateTriggerHandler.cls
+++ b/src/classes/StateTriggerHandler.cls
@@ -21,8 +21,9 @@ public with sharing class StateTriggerHandler {
             }
         }
         if(!stateIds.isEmpty()){
-            Map<Id, State__c> mapOfState = new Map<Id, State__c>([SELECT Id, Name, Total_District__c, (SELECT Id, Name FROM Districts__r) 
-                                                                 FROM State__c WHERE Id IN : stateIds]);
+            Map<Id, State__c> mapOfState = new Map<Id, State__c>([SELECT Id, Name, Total_District__c, 
+                                                                    (SELECT Id, Name FROM Districts__r) 
+                                                                  FROM State__c WHERE Id IN : stateIds]);
             for(State__c st: newStateList){
                 if(mapOfState.containsKey(st.Id)){ 
                     State wrapState = new State();
@@ -59,14 +60,17 @@ public with sharing class StateTriggerHandler {
 
             if(oldStateMap !=null && std.Country__c != oldStateMap.get(std.Id).Country__c){
                 mapOfCountryUpdate.put(oldStateMap.get(std.Id).Country__c,
-                new Country__c(Id=oldStateMap.get(std.Id).Country__c,Total_States__c= 0,Total_District__c = 0));
+                                        new Country__c(Id=oldStateMap.get(std.Id).Country__c,
+                                        Total_States__c= 0,Total_District__c = 0));
             }
         }
 
         if(!mapOfCountryUpdate.isEmpty()){
-            for(AggregateResult agr:[SELECT Country__c , COUNT(Id)totalStates, SUM(Total_District__c)totalDistrict 
-                                    FROM State__c WHERE Id
-                                    IN:mapOfCountryUpdate.keySet() GROUP BY Country__c]){
+            for(AggregateResult agr:[SELECT Country__c , COUNT(Id)totalStates, 
+                                     SUM(Total_District__c)totalDistrict 
+                                     FROM State__c WHERE Id
+                                     IN:mapOfCountryUpdate.keySet() 
+                                     GROUP BY Country__c]){
                 mapOfCountryUpdate.put(String.valueOf(agr.get('Country__c')),new Country__c(Id = (Id)agr.get('Country__c'),
                                         Total_States__c = (Decimal)agr.get('totalStates'),
                                         Total_District__c = (Decimal)agr.get('totalDistrict')));                       
