--- a/src/classes/ContactTriggerHandler.cls
+++ b/src/classes/ContactTriggerHandler.cls
@@ -8,30 +8,27 @@
 public with sharing class ContactTriggerHandler {
     /**   Description :   Method synchronize Record
     *     Created By  :   Sagar Nirwal
-    *     Arguments   :   List<Contact>
+    *     Arguments   :   List<State__c>,List<State__c>
     *     Return      :   void
     *     Revision log:   V_1.0 - Created  - Sagar Nirwal - 28/08/2022
     *                     V_1.1 - Modified - Sagar Nirwal - 28/08/2022 - Details what you modified
     **/
-    public static void synchronizeContactAccountPropertyRecord(List<Contact> newContactList) {
+    public static void synchronizeContactAccountPropertyRecord(List<Contact> newContactList, Map<Id,Contact> oldContactMap) {
         Set<Id> setOfAccountIds = new Set<Id>();
         for(Contact con: newContactList){
-            if(con.Status__c != null || String.isBlank(con.Status__c)){
+            if(con.Status__c == null && (oldContactMap == null || oldContactMap.get(con.Id).Status__c != con.Status__c)){
                 setOfAccountIds.add(con.AccountId);   
             }
         } 
         System.debug(setOfAccountIds);
         if(!setOfAccountIds.isEmpty()){
-            Map<Id,Account> mapOfAccount = new Map<Id,Account>([SELECT Id,Status__c,Property__c,
-                                                                Property__r.Status__c,
-                                                                Property__r.Name 
-                                                                FROM Account 
-                                                                WHERE Id IN: setOfAccountIds]);
-            System.debug(mapOfAccount);                                                            
+            Map<Id,Account> mapOfAccount = new Map<Id,Account>([SELECT Id,Status__c,Property__c,Property__r.Status__c,Property__r.Name 
+                                                                FROM Account WHERE Id IN: setOfAccountIds]);
+            System.debug(mapOfAccount);                                                           
             for(Contact con: newContactList){
                 if(mapOfAccount.containskey(con.AccountId)) {
                     Account acc = mapOfAccount.get(con.AccountId);
-                    if(acc.Status__c != null){
+                    if(acc.Status__c != null ){
                         con.Status__c = acc.Status__c;
                         System.debug('Contact Status:======== ' + con.Status__c); 
                     }else if(acc.Property__c != null){
@@ -39,7 +36,7 @@ public with sharing class ContactTriggerHandler {
                         acc.Status__c = acc.Property__r.Status__c;
                         System.debug('Contact Status:======== ' + con.Status__c);
                         System.debug('Account Status:======== ' + acc.Status__c);
-                    }
+                    } 
                 }
             }
         }
