--- a/src/classes/ContactTriggerHandler.cls
+++ b/src/classes/ContactTriggerHandler.cls
@@ -22,7 +22,8 @@ public with sharing class ContactTriggerHandler {
         } 
         System.debug(setOfAccountIds);
         if(!setOfAccountIds.isEmpty()){
-            Map<Id,Account> mapOfAccount = new Map<Id,Account>([SELECT Id,Status__c,Property__c,Property__r.Status__c,Property__r.Name 
+            Map<Id,Account> mapOfAccount = new Map<Id,Account>([SELECT Id,Status__c,Property__c,
+                                                                Property__r.Status__c,Property__r.Name 
                                                                 FROM Account WHERE Id IN: setOfAccountIds]);
             System.debug(mapOfAccount);                                                           
             for(Contact con: newContactList){
